--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -550,8 +550,8 @@ footer #socialmedia ul li a.badge.social.github:hover {
   header .fullheight .hgroup h2 {
     margin-bottom: 5px;
   }
-  #CYFinfo #CYFFocus section#networking,
-  #CYFinfo #CYFFocus section#technology{
+  #CYFinfo #CYFFocus section#backend,
+  #CYFinfo #CYFFocus section#networking{
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
