--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,7 @@ p {
 
 /* header section */
 header .fullheight {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.9)), url("../images/1.jpg") no-repeat center center fixed;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 1)), url("../images/1.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -363,7 +363,7 @@ header #nav .navbar ul li a.active {
   clear: both;
 }
 #apply article {
-  padding: 20px 40px;
+  padding: 20px 40px 30px 20px;
   margin-top: 100px;
   margin-bottom: 195px;
   background-color: rgba(26, 68, 60, 0.5);
@@ -648,4 +648,21 @@ footer #socialmedia ul li a.badge.social.github:hover {
     background-repeat: no-repeat;
     background-position: 120% center;
   }
+}
+#errorHeading{
+  width: 60px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #EFC94C;
+  color: #DF4848;
+  font-size: 1em;
+  line-height: 130%;
+}
+.error{
+  color: #DF4848;
+  list-style: square;
+  border-bottom: 1px solid #EFC94C;
+  margin-left: 10%;
+  line-height: 155%;
+  margin-bottom: 10px;
+  width: 60%;
 }
