made the error message for apply section to be displayed within the 95% width in small screens 450 - 650

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -640,6 +640,9 @@ footer #socialmedia ul li a.badge.social.github:hover {
     font-size: 1em;
     line-height: 130%;
   }
+	.error{
+	  width: 95%;
+	}
 }
 @media (max-width: 650px) {
   header #nav .navbar .brand a {
