--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,10 +146,10 @@ header .fullheight .hgroup p img {
 }
 header #nav {
   background-size: 100%;
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #0a5c71), color-stop(100%, #063642)) url('');
-  background-image: -moz-linear-gradient(top, #0a5c71, #063642);
-  background-image: -webkit-linear-gradient(top, #0a5c71, #063642);
-  background-image: linear-gradient(to bottom, #0a5c71, #063642);
+	background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #3a3f90), color-stop(100%, #45b29d));
+  background-image: -moz-linear-gradient(top, #3a3f90, #45b29d);
+  background-image: -webkit-linear-gradient(top, #3a3f90, #45b29d);
+  background-image: linear-gradient(to bottom, #45b29d, #3a3f90);
   width: 100%;
   z-index: 100;
 }
@@ -218,6 +218,7 @@ header #nav .navbar ul li {
 }
 header #nav .navbar ul li a {
   color: #FFFFFF;
+	font-weight: 900;
   font: 200 1em/1.5em "Exo 2", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1em;
   display: inline-block;
@@ -334,6 +335,65 @@ header #nav .navbar ul li a.active {
   border-radius: 2em;
   color: #DF4848;
 }
+#news .readMore:hover{
+	background: #DF4848;
+	color: #fff;
+}
+#news #newsDetail{
+	  display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+		right: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
+}
+#news #newsDetailContent {
+	margin: 5px 15%;
+  background-size: 100%;
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #fefaf0));
+  background-image: -moz-linear-gradient(top, #ffffff, #fefaf0);
+  background-image: -webkit-linear-gradient(top, #ffffff, #fefaf0);
+  background-image: linear-gradient(to bottom, #ffffff, #fefaf0);
+  text-align: center;
+  border-top: 1px solid #DF4848;
+  border-bottom: 1px solid #DF4848;
+	border-radius: 10px;
+	height: auto;
+	overflow: auto;
+}
+#news #newsDetailContent p{
+  padding: 30px 20px;
+}
+#news #newsDetailContent img {
+  width: 250px;
+	height: 250px;
+	width: 60%;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+.close {
+		margin: 5px 10px;
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.close i{
+	color: #000;
+}
+.close i:hover,
+.close i:focus {
+    color: #DF4848;;
+    text-decoration: none;
+    cursor: pointer;
+}
 /* Apply section */
 #apply {
   max-width: 100%;
@@ -406,12 +466,12 @@ header #nav .navbar ul li a.active {
 }
 #apply article .contactUs .form_group div textarea {
   border-radius: 5px;
-  margin-left: 100px;
+  margin-left: auto;
 }
 #apply article .contactUs .form_group div button {
   border: 2px solid #E27A3F;
   outline: none;
-  margin-left: 120px;
+  margin-left: auto;
   padding: 1em 3.5em;
   text-align: center;
   background: rgba(26, 68, 60, 0.5);
@@ -534,6 +594,13 @@ footer #socialmedia ul li a.badge.social.github:hover {
   #CYFinfo #moreDetails {
     padding:20px 8px;
   }
+	#news #newsDetailContent{
+		width: 90%;
+		margin: 5px 20px;
+	}
+	#news #newsDetailContent img{
+		width: 80%;
+	}
   #apply article {
     padding: 20px 20px;
     margin-top: 30px;
@@ -618,7 +685,7 @@ footer #socialmedia ul li a.badge.social.github:hover {
     font-size: 2.5em;
   }
   #news #newsIntro p {
-    font-size: 1.5em;
+    font-size: 1.2em;
     line-height: 140%;
   }
   #news #newsSection{
@@ -691,60 +758,4 @@ footer #socialmedia ul li a.badge.social.github:hover {
     background-repeat: no-repeat;
     background-position: 120% center;
   }
-}
-#news #newsDetail{
-	  display: none;
-    position: fixed;
-    z-index: 1;
-    padding-top: 100px;
-    left: 0;
-    top: 0;
-		right: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
-}
-#news #newsDetailContent {
-	margin: 5px 15%;
-  background-size: 100%;
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #fefaf0));
-  background-image: -moz-linear-gradient(top, #ffffff, #fefaf0);
-  background-image: -webkit-linear-gradient(top, #ffffff, #fefaf0);
-  background-image: linear-gradient(to bottom, #ffffff, #fefaf0);
-  text-align: center;
-  border-top: 1px solid #DF4848;
-  border-bottom: 1px solid #DF4848;
-	border-radius: 10px;
-	height: auto;
-	overflow: auto;
-	/*display: none;*/
-}
-#news #newsDetailContent p{
-  padding: 30px 20px;
-}
-#news #newsDetailContent img {
-  width: 250px;
-	height: 250px;
-	width: 60%;
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
-}
-.close {
-		margin: 5px 10px;
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-.close i{
-	color: #000;
-}
-.close i:hover,
-.close i:focus {
-    color: #DF4848;;
-    text-decoration: none;
-    cursor: pointer;
 }
