--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Exo+2:400,200,600,800);
+@import url('https://fonts.googleapis.com/css?family=Exo+2:200,400,600,800');
 /* reset */
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
