--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,7 +258,6 @@ header #nav .navbar ul li a.active {
 }
 #welcome h1 i{
 	color: #fec85d;
-
 }
 /* About CYF section */
 #CYFinfo {
@@ -349,7 +348,7 @@ header #nav .navbar ul li a.active {
 		right: 0;
     width: 100%;
     height: 100%;
-    overflow: auto; /* Enable scroll if needed */
+    overflow-y: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
 }
@@ -361,11 +360,11 @@ header #nav .navbar ul li a.active {
   background-image: -webkit-linear-gradient(top, #ffffff, #fefaf0);
   background-image: linear-gradient(to bottom, #ffffff, #fefaf0);
   text-align: center;
-  border-top: 1px solid #DF4848;
-  border-bottom: 1px solid #DF4848;
+  border: 1px solid #DF4848;
+  /*border-bottom: 1px solid #DF4848;*/
 	border-radius: 10px;
 	height: auto;
-	overflow: auto;
+	overflow-y: auto;
 }
 #news #newsDetailContent p{
   padding: 30px 20px;
@@ -589,7 +588,10 @@ footer #socialmedia ul li a.badge.social.github:hover {
     display: none;
   }
 	#welcome h1 {
-	  font-size: 1.5em;
+	  font-size: 1.3em;
+	}
+	#welcome p {
+	  font-size: 1em;
 	}
   #CYFinfo #moreDetails {
     padding:20px 8px;
@@ -598,7 +600,14 @@ footer #socialmedia ul li a.badge.social.github:hover {
 		width: 90%;
 		margin: 5px 20px;
 	}
-	#news #newsDetailContent img{
+	#news #newsDetailContent h2{
+	  font-size: 1.1em;
+	}
+	#news #newsDetailContent p{
+	  padding: 10px 20px;
+	}
+	#news #newsDetailContent img {
+		height: 200px;
 		width: 80%;
 	}
   #apply article {
