--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -505,10 +505,10 @@ footer {
   margin-left: auto;
   margin-right: auto;
   background-size: 100%;
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #0a5c71), color-stop(100%, #063642));
-  background-image: -moz-linear-gradient(top, #0a5c71, #063642);
-  background-image: -webkit-linear-gradient(top, #0a5c71, #063642);
-  background-image: linear-gradient(to bottom, #0a5c71, #063642);
+	background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #3a3f90), color-stop(100%, #45b29d));
+  background-image: -moz-linear-gradient(top, #3a3f90, #45b29d);
+  background-image: -webkit-linear-gradient(top, #3a3f90, #45b29d);
+  background-image: linear-gradient(to bottom, #45b29d, #3a3f90);
   padding: 30px 0;
 }
 footer:after {
