--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,7 @@ header .fullheight {
 }
 header .fullheight .hgroup {
   padding: 100px 0;
+  position: relative;
 }
 header .fullheight .hgroup h1 {
   color: #000000;
@@ -138,11 +139,27 @@ header .fullheight .hgroup h2 {
   font-size: 1.3em;
 }
 header .fullheight .hgroup p {
-  text-align: center;
+  position: absolute;
+  bottom : -40%;
+  left: 45%;
+  border: 1px solid #fec951;
+  padding: 11px 15px;
+  border-radius: 50%;
 }
-header .fullheight .hgroup p img {
-  padding-top: 50px;
+header .fullheight .hgroup p:hover {
+    background: #79b044;
+    border-color: transparent;
+}
+header .fullheight .hgroup p:hover i{
+    color: #000;
+}
+header .fullheight .hgroup p i{
+  padding-top: 10%;
   max-width: 50px;
+  border-radius:80%;
+  background: transparent;
+  color:cornsilk;
+  font-size: 2em;
 }
 header #nav {
   background-size: 100%;
@@ -235,15 +252,19 @@ header #nav .navbar ul li a.active {
 }
 /* welcome section */
 #welcome {
-  background-size: 100%;
+    background-size: 100%;
 	background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, .9)), url("../images/7.jpg") no-repeat center center fixed;
+}
+.fa{
+   color: #fff;
+   font-size: 5em;
 }
 #welcome article {
   text-align: center;
   max-width: 95%;
   margin-left: auto;
   margin-right: auto;
-	color: #fff;
+  color: #fff;
 }
 #welcome article:after {
   content: " ";
