--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,10 +106,10 @@ header .fullheight {
   -webkit-justify-content: center;
   justify-content: center;
   height: 100vh;
+  position: relative;
 }
 header .fullheight .hgroup {
   padding: 100px 0;
-  position: relative;
 }
 header .fullheight .hgroup h1 {
   color: #000000;
@@ -140,7 +140,7 @@ header .fullheight .hgroup h2 {
 }
 header .fullheight .hgroup p {
   position: absolute;
-  bottom : -40%;
+  bottom : 3em;
   left: 45%;
   border: 1px solid #fec951;
   padding: 11px 15px;
