--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,7 +140,7 @@ header .fullheight .hgroup h2 {
 }
 header .fullheight .hgroup p {
   position: absolute;
-  bottom : 2.5em;
+  bottom : 4em;
   left: 45%;
   border: 1px solid #fec951;
   padding: 11px 15px;
@@ -682,7 +682,7 @@ footer #socialmedia ul li a.badge.social.github:hover {
     margin-bottom: 5px;
   }
   header .fullheight .hgroup p {
-  bottom : 2.5em;
+  bottom : .5em;
 }
   #CYFinfo #CYFFocus section#backend,
   #CYFinfo #CYFFocus section#networking{
